<resources>
    <string name="app_name" translatable="false">EasyRPG Player</string>
    <string name="autodetect">Autodetect Region (Recommended)</string>
    <string name="west_europe">Western European</string>
    <string name="east_europe">Central/Eastern European</string>
    <string name="cyrillic">Cyrillic</string>
    <string name="japan">Japanese</string>
    <string name="korean">Korean</string>
    <string name="chinese_simple">Chinese (Simplified)</string>
    <string name="chinese_traditional">Chinese (Traditional)</string>
    <string name="greek">Greek</string>
    <string name="turkish">Turkish</string>
    <string name="hebrew">Hebrew</string>
    <string name="arabic">Arabic</string>
    <string name="baltic">Baltic</string>
    <string name="thai">Thai</string>
    <string name="vietnamese">Vietnamese</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="do_want_quit">Do you really want to quit?</string>
    <string name="do_want_reset">Do you really want to reset?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="revert">Revert</string>
    <string name="creating_dir_failed">Creating $PATH directory failed</string>
    <string name="path_not_readable">$PATH not readable</string>
    <string name="no_games_found_and_explanation_android_30">No RPG Maker 2000/2003 games found.\n\nThe EasyRPG folder you selected contains a \"games\" folder. Use a file manager app to put your games in this folder.\nGames can be put in subfolders or in ZIP/LZH archives.\n\nThe EasyRPG folder can be changed in the settings.</string>
    <string name="open_games_folder">Open the \"games\" folder</string>
    <string name="no_external_storage">No external storage (e.g. SD card) found</string>
    <string name="not_valid_game">$PATH is not a valid game</string>
    <string name="select_game_region">Select game region</string>
    <string name="change_the_layout">Change the layout</string>
    <string name="launch_debug_mode">Launch in debug mode</string>
    <string name="game_rename">Rename game</string>
    <string name="open_save_folder">Open savegame folder</string>
    <string name="choose_layout">Choose a layout</string>
    <string name="unknown_region">Unknown region</string>
    <string name="region_modification_failed">Changing region failed</string>
    <string name="refresh">Refresh</string>
    <string name="change_default_mapping">Change the default button mapping</string>
    <string name="how_to_use_easy_rpg">How to use EasyRPG Player</string>
    <string name="how_to_use_easy_rpg_explanation_android_30">Put your RPG Maker 2000/2003 games in subdirectories of the \"games\" folder.\nGames have to be uncompressed or in a ZIP/LZH archive.\nRAR, 7z and EXE files are NOT supported.\n\nOptional features (Please refer to the settings):\n- The RTP (shared assets used by some games) can be provided\n- A custom soundfont to alter how MIDI music sounds can be provided</string>
    <string name="visit_website">Visit our website</string>
    <string name="watch_explanation_video">Getting started and adding games (Video Guide)</string>
    <string name="error_no_games_folder">The \"games\" folder does not exist or is not a folder. Please create it manually or select a different location for the EasyRPG folder. The EasyRPG folder can be changed in the settings.</string>
    <string name="error_games_no_rw">The \"games\" folder is not readable or writable. Please select a different location for the EasyRPG folder. The EasyRPG folder can be changed in the settings.</string>
    <string name="error_saf_title">Bad folder selected</string>
    <string name="error_saf_select_easyrpg">Please create an empty EasyRPG folder and select it.</string>
    <string name="error_saf_download_selected">The Download folder cannot be used as the EasyRPG folder.</string>
    <string name="error_saf_folder_not_empty">The selected folder contains other files and cannot be used as the EasyRPG folder. When you remove all files inside the folder you can use it as the EasyRPG folder.</string>
    <string name="error_saf_bad_content_provider">The selected folder cannot be used as the EasyRPG folder. This problem can occur for various reasons, for example if you have selected the root directory or a storage location in the cloud.\n\n</string>
    <string name="view">View</string>
    <string name="view_show_title_desc">Choose how games are named</string>
    <string name="view_show_game_title">Use the title</string>
    <string name="view_show_game_folder">Use the folder name</string>
    <string name="toggle_ui">Toggle virtual buttons</string>
    <string name="toggle_fps">Toggle FPS display</string>
    <string name="reset_game">Reset game</string>
    <string name="end_game">End game</string>
    <string name="report_bug">Report a bug</string>
    <string name="report_bug_msg">This function will open your E-mail program (e.g. Gmail) to send us the bug report.\n\nIf you don\'t want to send a mail or don\'t have a mail program configured you can open a new issue at https://github.com/EasyRPG/Player/issues instead.</string>
    <string name="report_bug_mail">Thank you for supporting EasyRPG Player.\n
A logfile and your savegames were attached to this E-Mail.\n
Please don\'t remove the logfile! We need a savegame that is close to the bug location.\n
Please tell us in detail what went wrong.\n\n
    </string>
    <string name="video">Video</string>
    <string name="audio">Audio</string>
    <string name="input">Input</string>
    <string name="font">Font</string>
    <string name="easyrpg_folders">EasyRPG Folders</string>
    <string name="settings">Settings</string>
    <string name="screen_size">Screen scaling:</string>
    <string name="fullscreen_mode">Fullscreen</string>
    <string name="force_landscape_mode">Force landscape orientation</string>
    <string name="scale_nearest">Scale to screen size using nearest neighbour (Fast, bad quality)</string>
    <string name="scale_integer">Scale to a multiple of the game resolution (Fast, smaller image, good quality)</string>
    <string name="scale_bilinear">Scale to screen size and apply a bilinear filter (Slow, good quality)</string>
    <string name="stretch">Ignore aspect ratio (Stretch to the width of the screen)</string>
    <string name="settings_resolution">Game Resolution:</string>
    <string name="settings_resolution_desc">Changing the resolution can cause graphical glitches or break the game. You have been warned!</string>
    <string name="settings_resolution_original">Original (320x240, 4:3, Recommended)</string>
    <string name="settings_resolution_widescreen">Widescreen (416x240, 16:9, Experimental)</string>
    <string name="settings_resolution_ultrawide">Ultrawide (560x240, 21:9, Experimental)</string>
    <string name="enable_vibration">Enable vibrations</string>
    <string name="vibrate_when_sliding_direction">Vibrate when sliding to another direction</string>
    <string name="settings_custom_soundfont">Custom Soundfont:</string>
    <string name="open_the_sound_fonts_folder">Open the \"soundfonts\" folder</string>
    <string name="settings_soundfont_explanation">Put soundfonts in SF2-format in the \"soundfonts\" folder. Soundfonts alter how MIDI music sounds.</string>
    <string name="settings_soundfont_found">Soundfonts:</string>
    <string name="settings_default_soundfont">Default Soundfont</string>
    <string name="music_volume">Music volume</string>
    <string name="sound_volume">Sound effect volume</string>
    <string name="input_layout_transparency">Input layout transparency:</string>
    <string name="ignore_size_settings">Ignore button size settings and use this instead:</string>
    <string name="settings_input_show_ab_as_zx">Display A and B buttons as Z and X</string>
    <string name="no_read_access_on_dir">No read access on %1$s</string>
    <string name="quick_access">Quick access</string>
    <string name="fast_forward">Fast-forward button mode:</string>
    <string-array name="fast_forward_mode">
        <item>@string/fast_forward_mode_hold</item>
        <item>@string/fast_forward_mode_tap</item>
    </string-array>
    <string name="fast_forward_mode_hold">hold</string>
    <string name="fast_forward_mode_tap">tap</string>
    <string name="fast_forward_factor">Speed multiplier:</string>
    <string name="select_the_games_folder">Select EasyRPG folder</string>
    <string name="id_select_games_folder_explanation">EasyRPG Player requires a dedicated folder. After touching the button you are asked to select a folder.\n\nIf you use this app for the first time there is no EasyRPG folder. Create a new EasyRPG folder and then select it.\n\nIf you used this app before, select the existing EasyRPG folder.</string>
    <string name="Loading">Loading…</string>
    <string name="enable_rtp_support">Enable RTP support</string>
    <string name="rtp_explanation">The RTP provides shared assets used by some games.\nPut the RPG Maker 2000 RTP in \"rtp/2000\" and the RPG Maker 2003 RTP in \"rtp/2003\".\nPlease note that enabling RTP support will significantly increase the initial loading time of a game.</string>
    <string name="rtp_not_found">RTP $YEAR not found. Games that require this RTP will have missing assets.</string>
    <string name="rtp_found">RTP $YEAR found: $NAME ($FOUND of $MAX assets found)</string>
    <string name="open_rtp_folder">Open the \"rtp\" folder</string>
    <string name="open_fonts_folder">Open the \"fonts\" folder</string>
    <string name="settings_fonts_explanation">Put fonts in the \"fonts\" folder. For the best result use TTF fonts or bitmap (FON) fonts.</string>
    <string name="settings_fonts_explanation2">The game decides whether it uses the first font or the second font.</string>
    <string name="settings_fonts_size_explanation">The font size setting has no effect when using the built-in font or certain bitmap fonts.</string>
    <string name="settings_fonts_size_explanation2">The size must be set so that the # is at least partially visible. If you cannot see it, the text will be cut off in-game.</string>
    <string name="settings_font_1">First Font:</string>
    <string name="settings_font_2">Second Font:</string>
    <string name="settings_font_size">Font size</string>
    <string name="settings_font_default">Built-In Font</string>
    <string name="manage_input_layouts">Manage Input Layouts:</string>
    <string name="edit_name">Edit name</string>
    <string name="edit_layout">Edit layout</string>
    <string name="delete">Delete</string>
    <string name="default_layout">Default</string>
    <string name="horizontal_input_layout">Horizontal (Landscape) Input Layout</string>
    <string name="vertical_input_layout">Vertical (Portrait) Input Layout</string>
    <string name="settings_edit_layout_explanation">When editing an input layout, buttons can be added (e.g. a Shift button).\n To add a button press the back button and select "Add a button".</string>
    <string name="add_a_button">Add a button</string>
    <string name="reset_button_mapping">Reset button mapping</string>
    <string name="exit_without_saving">Exit without saving</string>
    <string name="save_and_quit">Save and quit</string>
    <string name="key_enter">Enter (Z)</string>
    <string name="key_cancel">Cancel (ESC and X)</string>
    <string name="key_shift">Shift</string>
    <string name="key_fast_forward">Fast forward</string>
    <string name="key_debug_walk_through_walls">Walk through walls (Requires debug mode)</string>
    <string name="key_debug_menu">Open Debug menu (Requires debug mode)</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="menu">Open Android menu</string>
    <string name="unsupported_engine_card">$ENGINE is unsupported</string>
</resources>