<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_manage"
            android:icon="@drawable/ic_settings_black"
            android:title="@string/settings"/>
        <item
            android:id="@+id/nav_help"
            android:icon="@drawable/ic_info"
            android:title="@string/how_to_use_easy_rpg"/>
        <item
            android:id="@+id/nav_website"
            android:icon="@drawable/ic_home_dark"
            android:title="@string/visit_website"/>
    </group>

    <!--
    <item android:title="">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="Share"/>
        </menu>
    </item>
    -->
</menu>
