<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:id="@+id/settings_font_linear_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:context="org.easyrpg.player.settings.SettingsFontActivity"
        android:padding="20dp"
        android:gravity="center">

        <Button
            android:id="@+id/button_open_font_folder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/open_fonts_folder" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/settings_fonts_explanation"
            android:textSize="18sp" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/settings_fonts_explanation2"
            android:textSize="18sp" />

        <include layout="@layout/separator"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/settings_font_1"
            android:textSize="20sp"
            android:paddingTop="10dp"/>

        <LinearLayout
            android:id="@+id/settings_font1_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:orientation="vertical"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:text="@string/settings_font_size"
            android:textSize="20sp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/settings_font1_size_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:textSize="20sp"/>

            <SeekBar
                android:id="@+id/settings_font1_size"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:max="10"
                android:progress="100"
                />
        </LinearLayout>

        <ImageView
            android:id="@+id/settings_font1_preview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="Font 1 Preview"
            android:adjustViewBounds="true"
            android:scaleType="fitXY"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/settings_fonts_size_explanation"
            android:textSize="18sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/settings_fonts_size_explanation2"
            android:textSize="18sp" />

        <include layout="@layout/separator"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/settings_font_2"
            android:textSize="20sp"
            android:paddingTop="10dp"/>

        <LinearLayout
            android:id="@+id/settings_font2_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:orientation="vertical"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:text="@string/settings_font_size"
            android:textSize="20sp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/settings_font2_size_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:textSize="20sp"/>

            <SeekBar
                android:id="@+id/settings_font2_size"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:max="10"
                android:progress="100"
                />
        </LinearLayout>

        <ImageView
            android:id="@+id/settings_font2_preview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="Font 2 Preview"
            android:adjustViewBounds="true"
            android:scaleType="fitXY" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/settings_fonts_size_explanation"
            android:textSize="18sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/settings_fonts_size_explanation2"
            android:textSize="18sp" />
    </LinearLayout>
</ScrollView>
