<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp">

        <!-- Vibration -->
        <CheckBox
            android:id="@+id/settings_enable_vibration"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/enable_vibration"
            android:textSize="20sp"/>

        <CheckBox
            android:id="@+id/settings_vibrate_when_sliding"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/vibrate_when_sliding_direction"
            android:textSize="20sp"/>

        <include layout="@layout/separator"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/settings_fast_forward"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_toStartOf="@+id/settings_fast_forward_mode"
                android:text="@string/fast_forward"
                android:textSize="20sp" />

            <androidx.appcompat.widget.AppCompatSpinner
                android:id="@+id/settings_fast_forward_mode"
                style="@style/Widget.AppCompat.Spinner.Underlined"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:entries="@array/fast_forward_mode"
                android:layout_alignParentEnd="true"
                android:layout_alignBaseline="@id/settings_fast_forward" />

            <TextView
                android:id="@+id/settings_fast_forward_multiplier_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fast_forward_factor"
                android:textSize="20sp"
                android:layout_alignParentStart="true"
                android:layout_below="@id/settings_fast_forward"
                android:layout_alignBaseline="@+id/settings_fast_forward_multiplier" />

            <SeekBar
                android:id="@+id/settings_fast_forward_multiplier"
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:max="8"
                android:progress="1"
                android:layout_alignParentEnd="true"
                android:layout_below="@id/settings_fast_forward"
                />
        </RelativeLayout>

        <include layout="@layout/separator"/>

        <!-- InputLayout transparency -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:text="@string/input_layout_transparency"
            android:textSize="20sp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/settings_layout_transparency_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:textSize="20sp"/>

            <SeekBar
                android:id="@+id/settings_layout_transparency"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:max="255"
                android:progress="5"
                />
        </LinearLayout>

        <include layout="@layout/separator"/>

        <!-- InputLayout size -->
        <CheckBox
            android:id="@+id/settings_ignore_layout_size"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:text="@string/ignore_size_settings"
            android:textSize="20sp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/settings_input_size_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:textSize="20sp"/>

            <SeekBar
                android:id="@+id/settings_layout_size"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:max="300"
                android:progress="10"
                />
        </LinearLayout>

        <include layout="@layout/separator"/>

        <!-- Input Layout Managing -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:text="@string/manage_input_layouts"
            android:textSize="20sp"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/settings_horizontal_input_layout">
            <TextView
                android:textSize="20sp"
                android:paddingStart="20sp"
                android:paddingEnd="20sp"

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_alignParentStart="true"
                android:layout_toStartOf="@+id/settings_horizontal_input_layout_settings_button"
                android:text="@string/horizontal_input_layout"
                />

            <ImageButton
                android:id="@+id/settings_horizontal_input_layout_settings_button"
                style="?android:attr/borderlessButtonStyle"

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:padding="0dp"

                android:src="@drawable/ic_action_settings_black" />
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/settings_vertical_input_layout">
            <TextView
                android:textSize="20sp"
                android:paddingStart="20sp"
                android:paddingEnd="20sp"

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_alignParentStart="true"
                android:layout_toStartOf="@+id/settings_vertical_input_layout_settings_button"
                android:text="@string/vertical_input_layout"
                />

            <ImageButton
                android:id="@+id/settings_vertical_input_layout_settings_button"
                style="?android:attr/borderlessButtonStyle"

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:padding="0dp"

                android:src="@drawable/ic_action_settings_black" />
        </RelativeLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:text="@string/settings_edit_layout_explanation"
            android:textSize="18sp"

            android:paddingHorizontal="20dp"
            android:paddingVertical="10dp"
            />
    </LinearLayout>
</ScrollView>

